<resources>
    <string name="app_name">MobilePTZ</string>

    <!-- common -->
    <string name="goto_setting">去设置</string>
    <string name="negative">取消</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="title_back">返回</string>

    <!-- permissions -->
    <string name="permission_hint">权限提醒</string>
    <string name="permission_describe_reason">程序需要-%1$s-以正常运行</string>
    <string name="permission_way">请在设置-应用-%1$s-权限中开启-%2$s-权限,以正常使用</string>
    <string name="permission_storage">存储权限</string>
    <string name="permission_sdcard">存储</string>
    <string name="permission_camera_lens">摄像头权限</string>
    <string name="permission_camera">相机</string>
    <string name="permission_recording_audio">录音权限</string>
    <string name="permission_recording_mic">麦克风</string>

    <!-- 相册 -->
    <string name="album">图库</string>
    <string name="photo">照片</string>

    <!-- camera -->
    <!-- 白平衡 -->
    <string name="white_balance">白平衡</string>
    <string name="white_balance_auto">自动</string>
    <string name="white_balance_incandescent">白炽灯</string>
    <string name="white_balance_fluorescent">荧光灯</string>
    <string name="white_balance_daylight">日光</string>
    <string name="white_balance_cloudy_daylight">阴天</string>

    <!-- 闪光灯 -->
    <string name="camera_flash">闪光灯</string>
    <string name="flash_auto">自动</string>
    <string name="flash_on">打开</string>
    <string name="flash_off">关闭</string>
    <string name="flash_torch">常亮</string>
    
    <!-- 网格 -->
    <string name="camera_grid">网格</string>
    <string name="grid_off">关闭</string>
    <string name="grid_lines">网格线</string>
    <string name="grid_diagonal">网格线与对角线</string>
    <string name="grid_center_point">中心点</string>

    <!-- 视频分辨率 -->
    <string name="video_resolution">视频分辨率</string>
    <string name="video_resolution_1080p">1080P</string>
    <string name="video_resolution_720p">720P</string>
    <string name="video_resolution_480p">480P</string>

    <!-- 拍照模式 -->
    <string name="photo_mode_single">单拍</string>
    <string name="photo_mode_panoramic">全景拍</string>
    <string name="photo_mode_long_exposure">长曝光</string>

    <!-- 系统设置 -->
    <string name="setting_title">设置</string>
    <string name="setting_ptz">云台</string>
    <string name="setting_common">通用</string>
    <string name="photo_ratio">照片比例</string>
    <string name="antibanding">抗闪烁</string>
</resources>
