<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="250dp"
              android:layout_height="match_parent"
              android:layout_gravity="left"
              android:background="@drawable/camera_left_menu_shape"
              android:orientation="horizontal"
              android:visibility="gone"
              android:weightSum="2.5">
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/photo_mode_single_selector"
                android:gravity="center"
                android:text="@string/photo_mode_single"
                android:textColor="@color/common_color_selector"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/photo_mode_panoramic_selector"
                android:gravity="center"
                android:text="@string/photo_mode_panoramic"
                android:textColor="@color/common_color_selector"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/photo_mode_long_exposure_selector"
                android:gravity="center"
                android:text="@string/photo_mode_long_exposure"
                android:textColor="@color/common_color_selector"/>
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/take_select_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

</LinearLayout>